--- a/input.html
+++ b/input.html
@@ -5,19 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>input</title>
+
+
+    <link rel="stylesheet" href="css/input.css">
 </head>
 <body>
 
-    <form>
-        <input type="text" placeholder="글을 입력해주세요!">
-        <button>등록하기!</button>
+    <form class="wrap">
+        <div class="title_wrap">
+            <div class="title_img"></div>
+            JH_Insta
+        </div>
+        <div class="img_box"></div>
+        <div class="input_wrap">
+            <input type="text" placeholder="댓글입력">
+            <button>게시</button>
+        </div>
+        <div class="comment_wrap"></div>
     </form>
     
-    <script>
+    
 
 
-
-    </script>
+    <script src="js/input.js"></script>
 
 
 </body>
